# mcp-zentao

./: .env  .env.example  .gitignore  FINAL_PROJECT_REPORT.md  IMPLEMENTATION_VERIFICATION.md  PROJECT_COMPLETION_REPORT.md  PROJECT_FINAL_SUMMARY.md  README.md  README_ZENTAO.md  STAGE_FOUR_COMPLETION_REPORT.md  STAGE_THREE_COMPLETION_REPORT.md  USER_REALNAME_FEATURE_REPORT.md  pyproject.toml  requirements.txt  start_stage_four_test.bat  start_stage_three_test.bat  start_zentao_mcp.bat  test_zentao.bat
design/: TODO.md  ai-step.md  api-details-completion-report.md  project-design.md  sk_mcp_server_guide.md  stage1-completion-report.md
docs/: TODO.md  index.md  sk-mcp-server-guide.md
docs/openapi/: conventions.md  endpoints.md  pagination.md  zentao-api.yaml
docs/semantic-kernel/: mcp-server.md
docs/testing/: httpx-mock.md  openapi-test-plan.md
src/: zentao_mcp_server.py
src/mcp_zentao/: __init__.py  constants.py  formatter.py  (+1 more)
test/: code_verification_test.py  final_verification.py  simple_realname_test.py  test_api_details_collection.py  test_bug_display_summary.py  test_client_details.py  test_data_collection.py  test_database_simple.py  test_detailed_analysis.py  test_http_server_simple.py  test_model_validation.py  test_paginated_client.py  test_simple.py  test_sk_mcp_server.py  test_sse_connection.py  test_stage_four_http.py  test_stage_four_http_new.py  test_stage_three.py  test_stage_three_http.py  test_user_realname_bug_query.py  test_zentao_api.py  test_zentao_api_structured.py  test_zentao_database.py  test_zentao_mcp.py  verify_all_functions.py
tests/: conftest.py  test_api_validation.py
(+17 files in other folders)
