[project]
name = "mcp-zentao"
version = "1.0.0"
description = "v11.7 禅道系统 MCP 服务器"
readme = "README.md"
authors = [
    { name = "nblog" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "semantic-kernel[mcp]>=1.32.2",
]

[project.scripts]
mcp-zentao = "mcp_zentao.sk_mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
