[project]
name = "mcp-zentao"
version = "1.0.0"
description = "v11.7 禅道系统 MCP 服务器"
readme = "README.md"
authors = [
    { name = "nblog" }
]
requires-python = ">=3.11"
dependencies = [
    "semantic-kernel[mcp]",
]

[project.scripts]
mcp-zentao = "mcp_zentao.sk_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest",
    "python-dotenv",
    "schemathesis",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
